[project]
name = "datalab"
version = "0.1.0"
authors = [
  {name = "Nick Ulle", email = "nick.ulle@gmail.com"},
]
license = "LGPL-2.1-only"
requires-python = ">= 3.11"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


# Dependencies
# ------------
[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
datalab = { path = ".", editable = true }


# Tasks
# -----
[tool.pixi.tasks]


# Packaging
# ---------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/datalab"]
