[project]
name = "datalab"
version = "0.3.0"
authors = [
  {name = "Nick Ulle", email = "nick.ulle@gmail.com"},
]
license = "LGPL-2.1-only"
requires-python = ">= 3.11"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]


# Dependencies
# ------------
[tool.pixi.dependencies]
loguru = ">=0.7.3,<0.8"

[tool.pixi.pypi-dependencies]
datalab = { path = ".", editable = true }


# Tasks
# -----
[tool.pixi.tasks]


# Packaging
# ---------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/datalab"]
